# scaler-rust

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  build.rs  build.sh
manifest/: serverless-simulaion.yaml
proto/: serverless-sim.proto
src/: config.rs  lib.rs  main.rs  platform.rs  rpc.rs  util.rs
src/cell/: base.rs  freeless.rs  memory.rs  metric.rs  mod.rs  naive.rs  naive_set_1.rs  naive_set_2.rs  stork.rs
src/cell/count_prediction/: mod.rs
src/cell/mixed/: mod.rs  simple.rs
src/model/: mod.rs
src/scheduler/: cell.rs  mod.rs
src/server/: mod.rs
