[package]
name = "scaler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
tonic = "0.9"
prost = "0.11"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
dashmap = "5"
uuid = { version = "1", features = ["v4"] }

[build-dependencies]
anyhow = "1"
tonic-build = "0.9"