[package]
name = "scaler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
tonic = "0.9"
prost = "0.11"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
dashmap = "5"
uuid = { version = "1", features = ["v4"] }
parking_lot = "0.12"
futures = "0.3"
log = "0.4"
env_logger = "0.10"
chrono = "0.4"
crossbeam-utils = "0.8"

[build-dependencies]
anyhow = "1"
tonic-build = "0.9"